[tool.poetry]
name = "met-impression"
version = "0.1.0"
description = ""
authors = ["Chris Barry <2490974+ChrisW-B@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "met_impression"}]

[tool.poetry.scripts]
start = "met_impression.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
